# tome-koq-game-list

./: .gitignore  README.md  Tome koQ Game List.md  tome-koq-game-list.md  tomeru_yt.csv
.github/workflows/: main.yml  markdownformat.yml  markdownlint.yml
data/: tomeru_koqchan_twch_20230731.csv  tomeru_koqchan_twch_20230831.csv  tomeru_koqchan_twch_20230930.csv  tomeru_koqchan_twch_20231231.csv  tomeru_koqchan_twch_20240623.csv  tomeru_yt.csv
devscripts/make-calendar/: README.md  pyproject.toml  sample.py
devscripts/make-calendar/make_calendar/: __main__.py
