[tool.poetry]
name = "make-calendar"
version = "0.1.0"
description = ""
authors = ["miminashii <koqchannotifier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.99.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
markdown-to-json = "^2.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkcal = 'make_calendar.__main__:main'

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.black]
target-version = ['py311']
line-length = 120
